syntax = "proto3";

service Bank {
    rpc InitializeBranch (InitializeBranchRequest) returns (InitializeBranchResponse);
    rpc Deposit (DepositRequest) returns (DepositResponse);
    rpc Withdraw (WithdrawRequest) returns (WithdrawResponse);
    rpc Query (QueryRequest) returns (QueryResponse);
}

message InitializeBranchRequest {
    int32 branch_id = 1;
    int32 initial_balance = 2;
}

message InitializeBranchResponse {
    string result = 1;
}

message DepositRequest {
    int32 customer_id = 1;
    int32 amount = 2;
}

message DepositResponse {
    string result = 1;
}

message WithdrawRequest {
    int32 customer_id = 1;
    int32 amount = 2;
}

message WithdrawResponse {
    string result = 1;
}

message QueryRequest {
    int32 customer_id = 1;
}

message QueryResponse {
    int32 balance = 1;
}
